--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,184 +1,605 @@
-/* Layout general */
-.layout {
-  display: flex;
-  min-height: 100vh;
-}
+  /* Layout general */
+  .layout {
+    display: flex;
+    min-height: 100vh;
+  }
 
-/*sidevar*/
+  .layout.sidebar-expanded .sidebar {
+    width: 350px;
+  }
 
-
-.sidebar {
-  background-color: white;
-  color: black;
-  width: 80px; /* Comprimido inicialmente */
-  transition: width 0.3s;
-  overflow: hidden;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  box-shadow: 2px 0 6px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 10;
-}
-
-.sidebar:hover {
-  width: 220px; /* Se expande al pasar el mouse */
-}
+  /*sidevar*/
 
 
-.logo-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px 0;
-  transition: padding 0.3s;
-}
+  .sidebar {
+    background-color: white;
+    color: black;
+    width: 80px; /* Comprimido inicialmente */
+    transition: width 0.3s;
+    overflow: hidden;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    box-shadow: 2px 0 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 10;
+  }
 
-.logo {
-  width: 40px;
-  height: 40px;
-  object-fit: contain;
-  margin-bottom: 10px;
-}
-
-.brand-name {
-  font-size: 1.2rem;
-  color: #0A3873;
-  font-weight: bold;
-  display: none;
-}
-
-.sidebar:hover .brand-name {
-  display: flex;
-  padding-bottom: 0px;
-}
-
-.sidebar-nav {
-  width: 100%;
-  margin-top: 15px;
-  display: flex;
-  flex-direction: column;
-}
-
-.sidebar-nav a {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: black;
-  margin-right: 10px;
-  margin-top: 10px;
-  margin-left: 10px;
-  padding: 12px 20px;
-  border-radius: 10px;
-  text-decoration: none;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.sidebar-nav a:hover{
-  background-color: #0A3873;
-  color: white;
+  .sidebar:hover {
+    width: 350px; /* Se expande al pasar el mouse */
+  }
 
 
-}
+  .logo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0;
+    transition: padding 0.3s;
+  }
 
-.sidebar-nav a.active {
-  background-color: #0A3873;
-  color: white;
-  margin-left: 10px;
-  margin-right: 8px;
-}
+  .logo {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    margin-bottom: 10px;
+  }
+
+  .brand-name {
+    font-size: 1.2rem;
+    color: #0A3873;
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 0.3s;
+    height: 20px; /* Mantiene espacio */
+    overflow: hidden;
+  }
+
+  .sidebar:hover .brand-name {
+    opacity: 1;
+  }
+
+  .sidebar-nav {
+    width: 100%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar-nav a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: black;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    padding: 12px 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .sidebar-nav a:hover{
+    background-color: #0A3873;
+    color: white;
+
+
+  }
+
+  .sidebar-nav a.active {
+    background-color: #0A3873;
+    color: white;
+    margin-left: 10px;
+    margin-right: 8px;
+  }
 
 
 
-.sidebar-nav .material-icons {
-  font-size: 24px;
-}
+  .sidebar-nav .material-icons {
+    font-size: 24px;
+  }
 
-.link-text {
-  display: none;
-  transition: opacity 0.3s;
-}
-
-.sidebar:hover .link-text {
-  display: inline;
-  opacity: 1;
-}
+  .link-text {
+    display: none;
+    transition: opacity 0.3s;
+  }
 
 
-/* Navbar */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 25px;
-  background-color: #4E74A6;
-  border-bottom: 1px solid #CCC;
-}
+  .sidebar:hover .link-text {
+    display: inline;
+    opacity: 1;
+  }
 
-.search-bar {
-  flex: 1;
-  padding: 8px 15px;
-  border-radius: 20px;
-  border: 1px solid #CCC;
-  max-width: 400px;
-  outline: none;
-}
 
-.nav-icons {
-  display: flex;
-  gap: 20px;
-  font-size: 24px;
-  color: #0A3873;
-}
+  /* Navbar */
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 25px;
+    background-color: #ffffff;
+    border-bottom: 1px solid #CCC;
+  }
 
-.material-icons {
-  cursor: pointer;
-}
+  .search-bar {
+    flex: 1;
+    padding: 8px 15px;
+    border-radius: 20px;
+    border: 1px solid #CCC;
+    max-width: 400px;
+    outline: none;
+  }
 
-/* Contenido principal */
-.main-content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
+  .nav-icons {
+    display: flex;
+    gap: 20px;
+    font-size: 24px;
+    color: #0A3873;
+  }
 
-/* Reajuste del botón eliminar */
-.delete-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background-color: red;
-  color: white;
-  border: none;
-  padding: 10px;
-  border-radius: 5px;
-  z-index: 1;
-}
+  .material-icons {
+    cursor: pointer;
+  }
 
-.books-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  padding: 20px;
-}
+  /* Contenido principal */
+  .main-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: 80px;
+    transition: margin-left 0.3s;
+  }
 
-.book-card {
-  width: 200px; /* Tamaño más pequeño */
-  background-color: white;
-  border: 1px solid #E0E0E0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  .layout.sidebar-expanded .main-content {
+    margin-left: 350px;
+  }
 
-.title{
-  text-align: center;
-}
+  /* Reajuste del botón eliminar */
+  .delete-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1;
+  }
+
+  .books-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .book-card {
+    width: 200px; /* Tamaño más pequeño */
+    background-color: white;
+    border: 1px solid #E0E0E0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .title{
+    text-align: center;
+  }
+
+  body.sidebar-expanded .main-content {
+    margin-left: 350px;
+  }
+
+  .main-content {
+    margin-left: 80px; /* cuando sidebar está contraído */
+    transition: margin-left 0.3s;
+  }
+
+  .home-container{
+    background-color: #F5F5F5;
+  }
+
+  .delete-icon-button {
+    background-color: red;
+    border: none;
+    border-radius: 50%;
+    padding: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+
+  .delete-icon-button .material-icons {
+    color: white;
+    font-size: 20px;
+  }
+
+  .delete-icon-button:hover {
+    transform: scale(1.1);
+    background-color: #d50000;
+  }
+
+
+  .shopping-cart {
+    margin-top: auto;
+    padding: 15px;
+    width: 100%;
+    background-color: #f9f9f9;
+    border-top: 1px solid #ddd;
+    max-height: 300px;
+    overflow-y: auto;
+    font-size: 0.9rem;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
+  }
+
+  .shopping-cart h4 {
+    margin-bottom: 12px;
+    font-size: 1rem;
+    color: #0A3873;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .shopping-cart div {
+    margin-bottom: 10px;
+  }
+
+  .shopping-cart div > div {
+    font-weight: 500;
+    margin-bottom: 5px;
+    color: #333;
+  }
+
+  .shopping-cart select {
+    padding: 5px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    background-color: white;
+    margin-bottom: 6px;
+    font-size: 0.85rem;
+    width: 200px;
+    margin-top: 20px;
+    margin-left: 80px;
+  }
+
+  .shopping-cart button {
+    background-color: #d32f2f;
+    color: white;
+    border: none;
+    padding: 6px 10px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 0.85rem;
+    transition: background-color 0.3s ease;
+    margin-bottom: 8px;
+    width: 200px;
+    margin-top: 20px;
+    margin-left: 80px;
+  }
+
+  .shopping-cart button:hover {
+    background-color: #b71c1c;
+  }
+
+  .shopping-cart button[disabled] {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+
+  .buy_book{
+    width: 100%;
+    background-color: #0A3873 !important;
+    color: white !important;
+  }
+
+  .comprar{
+    margin-left: 10px !important;
+    width: 325px !important;
+    background-color: #2fd350 !important;
+  }
+
+  .eliminar{
+    background-color: #ff0000 !important;
+  }
+
+  .title_compra{
+    text-align: center;
+     font-weight: bold;
+  }
+
+
+
+
+  .profile-header {
+    display: flex;
+    align-items: center; /* Alinea verticalmente */
+    justify-content: center; /* Centra horizontalmente */
+    gap: 20px; /* Espacio entre foto y detalles */
+    margin-bottom: 20px;
+    width: 100%; /* Ocupa todo el ancho disponible */
+  }
+
+  .profile-photo {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #0A3873;
+    margin-left: 400px;
+  }
+
+  .profile-details {
+    flex: 1;
+    text-align: left; /* Alinea el texto de los detalles al centro */
+  }
+
+  .username {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #0A3873;
+  }
+
+  .bio {
+    font-size: 1rem;
+    color: #555;
+    margin-top: 10px;
+  }
+
+  .favorite-genres, .followers-count, .following-count {
+    font-size: 1rem;
+    color: #333;
+    margin-top: 10px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .books-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+    margin: 100px;
+  }
+
+  /* Estilo de la tarjeta del libro */
+  .book-card {
+    width: 300px;
+    background-color: white;
+    border: 1px solid #E0E0E0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 15px;
+    border-radius: 10px;
+    max-width: 350px;
+    margin: 40px;
+    box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
+    height: auto; /* Permite que la tarjeta se ajuste al contenido */
+  }
+
+  .book-card:hover {
+    transform: scale(1.05);
+  }
+
+  .book-card mat-card-title {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #0A3873;
+    text-align: center; /* Centrado del título */
+    margin-top: 10px;
+  }
+
+  .book-card mat-card-subtitle {
+    color: #757575;
+  }
+
+  /* Ajuste de la imagen del libro */
+  .book-image {
+    width: 100%;
+    height: 200px; /* Aumenta la altura de la imagen */
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+  }
+
+  /* Estilos de estadísticas del post */
+  .post-stats {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.9rem;
+    color: #555;
+    margin-top: 10px;
+  }
+
+  .post-stats i {
+    font-size: 1.1rem;
+    margin-right: 5px;
+  }
+
+  .title {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+  }
+
+  /* Estilos para el perfil */
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #F5F5F5;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    box-sizing: border-box;
+  }
+
+  .profile-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .profile-photo {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #0A3873;
+    margin-left: 400px;
+  }
+
+  .profile-details {
+    flex: 1;
+    text-align: left;
+  }
+
+  .username {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #0A3873;
+  }
+
+  .bio {
+    font-size: 1rem;
+    color: #555;
+    margin-top: 10px;
+  }
+
+  .favorite-genres, .followers-count, .following-count {
+    font-size: 1rem;
+    color: #333;
+    margin-top: 10px;
+  }
+
+
+
+  .books-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  /* Ajustes para la cuadrícula de libros */
+  .book-card {
+    background-color: white;
+    border: 1px solid #E0E0E0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease;
+  }
+
+  .book-card:hover {
+    transform: scale(1.05);
+  }
+
+  .book-card mat-card-title {
+    font-weight: bold;
+  }
+
+  .book-card mat-card-subtitle {
+    color: #757575;
+  }
+
+  /* Ajuste de la imagen de los libros */
+  .book-image {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
+  }
+
+
+  /* Estilo para el contenedor del formulario */
+  .new-post-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+  }
+
+  /* Título del formulario */
+  .new-post-title {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+  }
+
+  /* Estilo para el formulario */
+  .new-post-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  /* Estilos para los campos del formulario */
+  .new-post-form label {
+    font-weight: bold;
+    font-size: 1rem;
+    color: #333;
+  }
+
+  .new-post-form input,
+  .new-post-form textarea {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 1rem;
+    width: 100%;
+  }
+
+  .new-post-form textarea {
+    height: 120px;
+  }
+
+  .submit-button {
+    padding: 10px 20px;
+    background-color: #0A3873;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+  }
+
+  .submit-button:hover {
+    background-color: #0a2753;
+  }
